fixed gallery images on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -341,6 +341,7 @@ letter-spacing: 3px;
 
   .gallery-images{
     border-radius: 30%;
+    margin-left: 10px;
   }
 
   .product-images, .com-images, .residential-images{
@@ -356,7 +357,7 @@ letter-spacing: 3px;
     margin: 0;
   }
 
-  .com-images, .residential-images, .product-images, .product-images2{
+  .com-images, .residential-images, .product-images, .product-images2, .gallery-images{
     height: 220px;
     width: 330px;
 
